--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -63,7 +63,7 @@
   width: 1.5rem;
 
   &:hover {
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, .5);
   }
 }
 
