--- a/src/app/shared/module-content.scss
+++ b/src/app/shared/module-content.scss
@@ -24,4 +24,9 @@ a {
   &:hover {
     color: mat-color($tathva-app-accent);
   }
+
+  &.button {
+    color: inherit;
+    text-decoration: none;
+  }
 }
