--- a/src/app/shared/module-page.scss
+++ b/src/app/shared/module-page.scss
@@ -42,6 +42,6 @@
 }
 
 .content {
+  margin: 20px;
   max-width: 1080px;
-  padding: 20px;
 }
